<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/updateDescriptionTextInputLayoutXml"
        android:hint="@string/update_skill_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="4sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/updateSkillEditTextXml"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveUpdatedSkillButtonXml"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_below="@+id/updateDescriptionTextInputLayoutXml"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20sp"
        android:layout_margin="10sp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelUpdateButtonXml"
        android:layout_below="@+id/updateDescriptionTextInputLayoutXml"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20sp"
        android:text="@string/cancel"
        android:layout_margin="10sp"/>


</RelativeLayout>