<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParticularSkillActivity.ParticularSkillActivity">

    <include
        android:id="@+id/particularSkillToolbarXml"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/skillsNameTextInputLayoutXml"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/skills_name"
        android:layout_margin="4sp"
        app:layout_constraintTop_toBottomOf="@id/particularSkillToolbarXml"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/skillsNameMaterialTextViewXml"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/skillsDescriptionMaterialTextInputLayoutXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skillsNameTextInputLayoutXml"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/skillsNameTextInputLayoutXml"
        android:hint="@string/skills_description"
        android:layout_margin="4sp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/skillsDescriptionMaterialTextViewXml"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/skillsDateTextInputLayoutXml"
        android:layout_below="@id/skillsDescriptionMaterialTextInputLayoutXml"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/skillsDescriptionMaterialTextInputLayoutXml"
        android:hint="@string/skills_date_of_creation"
        android:layout_margin="4sp"
        android:textSize="20sp"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/skillsDateCreationMaterialTextViewXml"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/updateDescriptionButtonXml"
        android:layout_below="@id/skillsDateTextInputLayoutXml"
        app:layout_constraintTop_toBottomOf="@id/skillsDateTextInputLayoutXml"
        android:text="@string/update"
        android:layout_margin="4sp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteSkillButtonXml"
        android:layout_below="@+id/updateDescriptionButtonXml"
        app:layout_constraintTop_toBottomOf="@id/updateDescriptionButtonXml"
        android:text="@string/delete"
        android:layout_margin="4sp"
        android:layout_centerVertical="true"
        />
</androidx.constraintlayout.widget.ConstraintLayout>