<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewSkillActivity.CreateNewSkillActivity">

    <include
        android:id="@+id/createSkillToolbarXml"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newSkillsNameTextInputLayoutXml"
        android:layout_centerVertical="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/create_new_skill_name"
        android:layout_margin="4sp">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newSkillEditTextXml"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newSkillsDescriptionMaterialTextInputLayoutXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newSkillsNameTextInputLayoutXml"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/create_new_skill_description"
        android:layout_margin="4sp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newSkillDescriptionEditTextXml"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saveNewSkillButtonXml"
        android:layout_below="@id/newSkillsDescriptionMaterialTextInputLayoutXml"
        android:text="@string/save"
        android:layout_margin="4sp"/>


</RelativeLayout>